Build: update description

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "avatar-picker",
-  "description": "A set of assertions for checking thats an element has ( or does not have ) any number of classes. The check is order independent and gives a diff of the expected classes.",
+  "description": "A set of tools for selecting cropping and positioning avatars. Forked from https://bitbucket.org/atlassianlabs/avatar-picker/",
   "version": "1.0.0",
   "author": {
     "name": "Alex Schmitz and other contributors"
